<resources>
    <string name="app_name">SimpleGymApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">SimpleGym</string>
    <string name="second_fragment_label">Workout</string>
    <string name="login_fragment_label">Login</string>
    <string name="register_fragment_label">Register</string>
    <string name="userinfo_label">User Info</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="home">Home</string>
    <string name="first_fragment_button_run">Run workout</string>
    <string name="first_fragment_button_swim">Swim workout</string>
    <string name="first_fragment_button_lift">Weight lift workout</string>

    <string name="hello_first_fragment">Welcome to SimpleGym!</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="button">GO TO USER INFO</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="register_page">Register Page</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swimming">SWIMMING</string>
    <string name="running">RUNNING</string>
    <string name="weightlifting">WEIGHTLIFTING</string>
    <string name="change_workout_difficulty">Change Workout Difficulty</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="change_workout_frequency">Change Workout Frequency</string>
    <string name="change_password">Change Password</string>
    <string name="change_email">Change email</string>
    <string name="change">Change</string>
</resources>