<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.simplegymapp.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/first_fragment_to_userInfo_fragment"
            app:destination="@id/userInfoFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.simplegymapp.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/userInfoFragment"
        android:name="com.example.simplegymapp.UserInfoFragment"
        android:label="UserInfoFragment" >
        <action
            android:id="@+id/userInfo_to_first_fragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.simplegymapp.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_loginFragment_to_RegisterFragment"
            app:destination="@id/registerFragment" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.simplegymapp.RegisterFragment"
        android:label="@string/register_fragment_label"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_registerFragment_to_LoginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
</navigation>